nohup.out
  File "bug_report.py", line 83
    wihile 1:
           ^
SyntaxError: invalid syntax
